feat: Updated OpenAPI spec (#153)
