# src/libs/Replicate/Generated/Replicate.IReplicateApi.PredictionsList.g.cs
@@ -55,13 +55,19 @@ namespace Replicate
         /// `version` will be the unique ID of model version used to create the prediction.<br/>
         /// `data_removed` will be `true` if the input and output data has been deleted.
         /// </summary>
-        /// <param name="createdAfter"></param>
-        /// <param name="createdBefore"></param>
+        /// <param name="createdAfter">
+        /// Example: 2025-01-01T00:00:00.0000000+00:00
+        /// </param>
+        /// <param name="createdBefore">
+        /// Example: 2025-02-01T00:00:00.0000000+00:00
+        /// </param>
+        /// <param name="source"></param>
         /// <param name="cancellationToken">The token to cancel the operation with</param>
         /// <exception cref="global::Replicate.ApiException"></exception>
         global::System.Threading.Tasks.Task<global::Replicate.PredictionsListResponse> PredictionsListAsync(
             global::System.DateTime? createdAfter = default,
             global::System.DateTime? createdBefore = default,
+            global::Replicate.PredictionsListSource? source = default,
             global::System.Threading.CancellationToken cancellationToken = default);
     }
 }
